/*
 * This file is part of Dependency-Track.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 * Copyright (c) OWASP Foundation. All Rights Reserved.
 */
package org.dependencytrack.tasks;

import alpine.event.framework.Event;
import alpine.event.framework.Subscriber;
import net.javacrumbs.shedlock.core.LockingTaskExecutor;
import org.dependencytrack.dex.engine.api.DexEngine;
import org.dependencytrack.dex.engine.api.request.CreateWorkflowRunRequest;
import org.dependencytrack.event.PortfolioVulnerabilityAnalysisEvent;
import org.dependencytrack.proto.internal.workflow.v1.VulnAnalysisWorkflowArg;
import org.dependencytrack.vulnanalysis.VulnAnalysisWorkflow;
import org.jdbi.v3.core.statement.SqlStatements;
import org.jspecify.annotations.Nullable;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

import java.util.ArrayList;
import java.util.List;
import java.util.Map;
import java.util.UUID;

import static org.dependencytrack.persistence.jdbi.JdbiFactory.withJdbiHandle;
import static org.dependencytrack.util.LockProvider.executeWithLock;
import static org.dependencytrack.util.TaskUtil.getLockConfigForTask;

/**
 * A {@link Subscriber} to {@link PortfolioVulnerabilityAnalysisEvent} that submits
 * all projects in the entire portfolio for vulnerability analysis.
 */
public class VulnerabilityAnalysisTask implements Subscriber {

    private static final Logger LOGGER = LoggerFactory.getLogger(VulnerabilityAnalysisTask.class);

    private final DexEngine dexEngine;

    public VulnerabilityAnalysisTask(DexEngine dexEngine) {
        this.dexEngine = dexEngine;
    }

    public void inform(final Event e) {
        if (e instanceof PortfolioVulnerabilityAnalysisEvent) {
            try {
                executeWithLock(
                        getLockConfigForTask(VulnerabilityAnalysisTask.class),
                        (LockingTaskExecutor.Task) this::processPortfolio);
            } catch (Throwable ex) {
                LOGGER.error("An unexpected error occurred while submitting components for vulnerability analysis", ex);
            }
        }
    }

    private void processPortfolio() {
        List<Project> projectsPage = getProjectsPage(null);
        while (!projectsPage.isEmpty()) {
            if (Thread.currentThread().isInterrupted()) {
                LOGGER.warn("Interrupted before all projects could be processed");
                break;
            }

            // TODO: Extend lock if necessary.

            final var createWorkflowRunRequests =
                    new ArrayList<CreateWorkflowRunRequest<?>>(projectsPage.size());
            for (final Project project : projectsPage) {
                final var workflowRunRequest =
                        new CreateWorkflowRunRequest<>(VulnAnalysisWorkflow.class)
                                .withWorkflowInstanceId("scheduled-vuln-analysis:" + project.uuid())
                                .withConcurrencyKey("vuln-analysis:" + project.uuid())
                                .withLabels(Map.of("project_uuid", project.uuid().toString()))
                                .withArgument(
                                        VulnAnalysisWorkflowArg.newBuilder()
                                                .setProjectUuid(project.uuid().toString())
                                                .build());
                createWorkflowRunRequests.add(workflowRunRequest);
            }

            LOGGER.info("Scheduling vulnerability analysis for {} projects", createWorkflowRunRequests.size());
            dexEngine.createRuns(createWorkflowRunRequests);

            projectsPage = getProjectsPage(projectsPage.getLast());
        }
    }

    public record Project(long id, UUID uuid) {
    }

    private List<Project> getProjectsPage(@Nullable Project lastProject) {
        return withJdbiHandle(handle -> handle
                .createQuery("""
                        SELECT "ID"
                             , "UUID"
                          FROM "PROJECT"
                         WHERE "INACTIVE_SINCE" IS NULL
                        <#if lastId>
                           AND "ID" > :lastId
                        </#if>
                         ORDER BY "ID"
                         LIMIT 1000
                        """)
                .configure(SqlStatements.class, cfg -> cfg.setUnusedBindingAllowed(true))
                .bind("lastId", lastProject != null ? lastProject.id() : null)
                .defineNamedBindings()
                .map((rs, ctx) -> new Project(
                        rs.getLong(1),
                        rs.getObject(2, UUID.class)))
                .list());
    }

}
